--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iFeed</title>
-  </head>
-  <body class="bg-surface text-slate-900">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>IFeed</title>
+    <meta name="description" content="简单、高效、全平台、网页版RSS 阅读器、信息助手">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="dc.title" content="IFeed<">
+    <meta name="dc.description" content="简单、高效、全平台、网页版RSS 阅读器、信息助手">
+    <meta name="dc.source" content="https://www.ifeed.cc/">
+    <meta name="dc.language" content="zh_CN">
+    <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-1354874712972588">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta property="og:url" content="https://www.ifeed.cc/">
+    <meta property="og:site_name" content="IFeed">
+    <meta property="og:locale" content="zh_CN">
+    <meta property="og:type" content="article">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ifeed">
+    <meta name="twitter:creator" content="@ifeed">
+    <meta name="twitter:title" content="IFeed">
+    <meta name="twitter:description" content="简单、高效、全平台、网页版RSS 阅读器、信息助手">
+    <meta name="twitter:image" content="">
+    <!-- 谷歌浏览器 -->
+    <meta name="theme-color" content="#fff">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="icon" type="image" href="/favicon.ico"/>
+    <link rel="apple-touch-icon" href="/favicon.ico" sizes="180x180">
+    <link rel="mask-icon" href="/favicon.ico">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E4PSK55B0V"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-E4PSK55B0V');
+    </script>
+</head>
+<body class="bg-surface text-slate-900">
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
